# SKY

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Sky.sublime-project  Sky.sublime-workspace  TODO  rdm
Engine/: CMakeLists.txt
Engine/include/: Camera.h  DeltaTime.h  ImGuiSettings.h  InputManager.h  Material.h  Mesh.h  Model.h  Shader.h  Texture.h  Vertex.h  Window.h
Engine/src/: Camera.cpp  DeltaTime.cpp  ImGuiSettings.cpp  InputManager.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  Window.cpp
Game/: CMakeLists.txt
Game/RSC/: cords.txt  cube.mtl
Game/RSC/Cube/: Cube.mtl
Game/RSC/CubeRGBA/: Cube.mtl
Game/RSC/DeathsIsland/: DeathsIsland.mtl
Game/RSC/Grass/: Grass.mtl
Game/RSC/Ground/: Ground.mtl
Game/Shaders/: Jproject.sublime-project  Jproject.sublime-workspace  color.frag  color.vert  new.frag  new.vert
Game/src/: main.cpp  test.C++
Libs/glad/: CMakeLists.txt
Libs/glad/include/glad/: gl.h
Libs/glad/src/: gl.c
Libs/imgui/: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: Camera.h  DeltaTime.h  ImGuiSettings.h  InputManager.h  Window.h
engine/include/rendering/: EBO.h  Mesh.h  Model.h  Shader.h  Texture.h  VBO.h  Vertex.h
engine/src/: Camera.cpp  DeltaTime.cpp  I_Window.cpp  ImGuiSettings.cpp  InputManager.cpp  Window.cpp
engine/src/rendering/: EBO.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
game/Resources/: test.cpp
game/Shaders/: Phong.frag  default.frag  default.vert  error.frag  glm.frag  glm.vert  light.frag  light.vert  mTextures.frag  mTextures.vert  new.frag  new.vert  phongM.glsl
game/Shaders/Dif_Point_Spot/: DPS.vert  difuse.frag  point.frag  spot.frag
game/src/: main.cpp
libs/glad2/include/glad/: gl.h
libs/glad244/include/glad/: gl.h
old/engine/: CMakeLists.txt
old/engine/include/: ImGuiSettings.h
old/engine/include/rendering/: Mesh.h  Model.h  Shader.h  VAO.h  Vertex.h
old/engine/src/rendering/: Mesh.cpp  Model.cpp  Shader.cpp  VBO.cpp
old/game/: CMakeLists.txt
old/game/Resources/: test.cpp
old/game/Shaders/: Phong.frag  Phong.vert  default.frag  error.frag  light.frag  light.vert  mTextures.frag  phongM.glsl
old/game/Shaders/Dif_Point_Spot/: DPS.vert
old/game/src/: main.cpp
